# prism-blitz

./: CMakeLists.txt
resources/scenes/: main.xml
src/: main.cpp
